<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        android:backgroundTint="@color/white"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="21dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:fontFamily="@font/mont_bold"
                android:textSize="20sp"
                android:layout_marginHorizontal="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/text_dialog_forget_title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mont_regular"
                android:textSize="16sp"
                android:layout_marginTop="4dp"
                android:textColor="@color/color_text_main"
                android:lineSpacingExtra="3dp"
                android:text="@string/text_dialog_forget_description"
                android:gravity="center"
                android:layout_marginHorizontal="26dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDialogForgetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginHorizontal="26dp"
                android:backgroundTint="@color/color_main"
                android:fontFamily="@font/mont_bold"
                android:padding="15dp"
                android:text="@string/text_ok"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="14dp"
                android:textAllCaps="false"
                android:stateListAnimator="@null"
                android:textAppearance="?attr/textAppearanceBody2"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>